changed main, version bump

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "makerjs-smile",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A smiley face for Maker.js",
-  "main": "index.js",
+  "main": "smile.js",
   "scripts": {
     "test": "node test.js"
   },
